# ViaGebra

./: CMakeLists.txt  imgui.ini  run.bat  run.sh
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: examples.lua
include/: axe.h  drawfunc.h  gui.h  input.h  luaApi.h  main.h
src/: drawfunc.cpp  gui.cpp  input.cpp  luaApi.cpp  main.cpp
